cabal-version: >= 1.10

name: prolude
version: 0.0.0.5
synopsis: ITProTV's custom prelude
description:
    Prolude is ITProTV's custom prelude.
    <https://www.itpro.tv>

build-type: Simple
category: Prelude
license: MIT
license-file: LICENSE.txt
maintainer: ITProTV

source-repository head
    type: git
    location: https://github.com/EdutainmentLIVE/prolude

library
    default-language: Haskell2010

    exposed-modules:
        Prolude
        Prolude.Aeson
        Prolude.Core
        Prolude.Csv
        Prolude.Exception
        Prolude.Foldable
        Prolude.Json
        Prolude.Maybe
        Prolude.Monad
        Prolude.MonadIO
        Prolude.MongoDB
        Prolude.Text
        Prolude.Time

    build-depends:
        base >= 4.12.0 && < 4.15
        , aeson >= 1.4.7 && < 1.6
        , bytestring >= 0.10.8.2 && < 0.11
        , cassava >= 0.5.2.0 && < 0.6
        , containers >= 0.6.0.1 && < 0.7
        , mongoDB >= 2.7.0 && < 2.8
        , safe-exceptions >= 0.1.7 && < 0.2
        , scientific >= 0.3.6 && < 0.4
        , text >= 1.2.3.1 && < 1.3
        , time >= 1.8.0.2 && < 1.10
        , vector >= 0.12.0.3 && < 0.13